tests/negative/gold/block-call-test.gold
tests/negative/block-call-test.toit:8:4: error: Unexpected block
  (: it).call 499
   ^~~~
Compilation failed
